[package]
name = "axum-todo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
cargo-watch = "8.4.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.35.0", features = ["macros", "rt-multi-thread"] }
